--- a/index.html
+++ b/index.html
@@ -5,14 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
-    <tittle>Izart</tittle>
+    <title>Izart</title>
   </head>
   <body>
     <dev class="main">
       <dev class="container">
         <dev class="isi-main">
           <dev class="judul">
-            
+            <h2>Where you can practice your code knowledge<h2>
+            <p>improve your coding knowledge with us using new environment and new language programming to creade something new<p>
           </dev>
         </dev>
       </dev>
