--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <title>Izart</title>
   </head>
   <body>
-    <dev class="main">
-      <dev class="container">
+    <div class="main">
+      <div class="container">
          <h2>Where you can practice your code knowledge<h2>
          <p>improve your coding knowledge with us using new environment and new language programming to creade something new<p>
-      </dev>
-    </dev>
+      </div>
+    </div>
   </body>
 </html>
