--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
   <body>
     <div class="main">
       <div class="container">
+        <div class="judul">
          <h2>Where you can practice your code knowledge<h2>
          <p>improve your coding knowledge with us using new environment and new language programming to creade something new<p>
+        </div>
       </div>
     </div>
   </body>
