--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
          <h2>Where you can practice your code knowledge<h2>
          <p>improve your coding knowledge with us using new environment and new language programming to creade something new<p>
         </div>
+        <div class="more">
+          <span class="btn read">Read More<span>
       </div>
     </div>
   </body>
