--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <div class="container">
         <div class="judul">
          <h2>Where you can practice your code knowledge<h2>
-         <p>improve your coding knowledge with us using new environment and new language programming to creade something new<p>
+         <p>improve your coding knowledge with us using new environment and new language programming to create something new<p>
         </div>
         <div class="more">
           <span class="btn read">Read More<span>
