--- a/index.html
+++ b/index.html
@@ -1,1 +1,48 @@
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Progate</title>
+    <link rel="stylesheet" href="stylesheet.css">
+    <link rel="stylesheet" href="responsive.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+  </head>
+  <body>
+    <div class="program">
+      <div class="container">
+        <div class="judul">
+          <h2>What can you learn!!</h2>
+        </div>
+        <div class="contents">
+          <div class="content">
+            <div class="content-icon">
+              <img src="https://prog-8.com/images/html/advanced/html.png">
+            </div>
+            <p class="text-contents">Languages used to build and design the appearances of your websites. HTML adds the structure, and CSS styles it.</p>
+          </div>
+          <div class="content">
+            <div class="content-icon">
+              <img src="https://prog-8.com/images/html/advanced/jQuery.png">
+            </div>
+            <p class="text-contents">A fast, feature-rich and easy-to-use JavaScript library that handles animations and Ajax requests.</p>
+          </div>
+          <div class="content">
+            <div class="content-icon">
+              <img src="https://prog-8.com/images/html/advanced/ruby.png">
+            </div>
+            <p class="text-contents">A dynamic, general-purpose language that is simple and productive. It is commonly used around the world to build web applications.</p>
+          </div>
+          <div class="content">
+            <div class="content-icon">
+              <img src="https://prog-8.com/images/html/advanced/php.png">
+              <p>PHP</p>
+            </div>
+            <p class="text-contents">An open source scripting language that can be embedded into HTML, and well suited for web development.</p>
+          </div>
+          <div class="clear"></div>
+        </div>
+      </div>
+    </div>
+  </body>
+</html>
