--- a/index.html
+++ b/index.html
@@ -17,28 +17,21 @@
         <div class="contents">
           <div class="content">
             <div class="content-icon">
-              <img src="https://prog-8.com/images/html/advanced/html.png">
+              <img src="html.png">
             </div>
             <p class="text-contents">Languages used to build and design the appearances of your websites. HTML adds the structure, and CSS styles it.</p>
           </div>
           <div class="content">
             <div class="content-icon">
-              <img src="https://prog-8.com/images/html/advanced/jQuery.png">
+              <img src="c#.png">
             </div>
             <p class="text-contents">A fast, feature-rich and easy-to-use JavaScript library that handles animations and Ajax requests.</p>
           </div>
           <div class="content">
             <div class="content-icon">
-              <img src="https://prog-8.com/images/html/advanced/ruby.png">
+              <img src="swift.png">
             </div>
             <p class="text-contents">A dynamic, general-purpose language that is simple and productive. It is commonly used around the world to build web applications.</p>
-          </div>
-          <div class="content">
-            <div class="content-icon">
-              <img src="https://prog-8.com/images/html/advanced/php.png">
-              <p>PHP</p>
-            </div>
-            <p class="text-contents">An open source scripting language that can be embedded into HTML, and well suited for web development.</p>
           </div>
           <div class="clear"></div>
         </div>
