--- a/index.html
+++ b/index.html
@@ -17,19 +17,19 @@
         <div class="contents">
           <div class="content">
             <div class="content-icon">
-              <img src="html.png" height= "200" width= "400">
+              <img src="html.png" height= "200">
             </div>
             <p class="text-contents">Languages used to build and design the appearances of your websites. HTML adds the structure, and CSS styles it.</p>
           </div>
           <div class="content">
             <div class="content-icon">
-              <img src="react.png" height= "200" width= "400">
+              <img src="react.png" height= "200">
             </div>
             <p class="text-contents">A fast, feature-rich and easy-to-use JavaScript library that handles animations and Ajax requests.</p>
           </div>
           <div class="content">
             <div class="content-icon">
-              <img src="java.png" height= "200" width= "400">
+              <img src="java.png" height= "200">
             </div>
             <p class="text-contents">A dynamic, general-purpose language that is simple and productive. It is commonly used around the world to build web applications.</p>
           </div>
