--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
             <div class="content-icon">
               <img src="react.png" height="200" width="300">
             </div>
-            <p class="text-contents">A fast, feature-rich and easy-to-use JavaScript library that handles animations and Ajax requests.</p>
+            <p class="text-contents">front-end JavaScript library for building user interfaces or UI components.</p>
           </div>
           <div class="content">
             <div class="content-icon">
               <img src="java.png" height="200" width="300">
             </div>
-            <p class="text-contents">A dynamic, general-purpose language that is simple and productive. It is commonly used around the world to build web applications.</p>
+            <p class="text-contents">A high-level, class-based, object-oriented programming language that is designed to have as few implementation dependencies as possible.</p>
           </div>
           <div class="clear"></div>
         </div>
