--- a/index.html
+++ b/index.html
@@ -17,24 +17,30 @@
         <div class="contents">
           <div class="content">
             <div class="content-icon">
-              <img src="html.png" height="200" width="300">
+              <img src="html.png" height="200" width="250">
             </div>
             <p class="text-contents">Languages used to build and design the appearances of your websites. HTML adds the structure, and CSS styles it.</p>
-            <span class="btn read">Read More</span>
+            <div class="read-more">
+              <span class="btn read">Read More</span>
+            </div>
           </div>
           <div class="content">
             <div class="content-icon">
-              <img src="react.png" height="200" width="300">
+              <img src="react.png" height="200" width="250">
             </div>
-            <p class="text-contents">front-end JavaScript library for building user interfaces or UI components.</p>
-            <span class="btn read">Read More</span>
+            <p class="text-contents">A declarative, efficient, and flexible front-end JavaScript library for building user interfaces or UI components.</p>
+            <div class="read-more">
+              <span class="btn read">Read More</span>
+            </div>
           </div>
           <div class="content">
             <div class="content-icon">
-              <img src="java.png" height="200" width="300">
+              <img src="java.png" height="200" width="250">
             </div>
-            <p class="text-contents">A high-level, class-based, object-oriented programming language that is designed to have as few implementation dependencies as possible.</p>
-            <span class="btn read">Read More</span>
+            <p class="text-contents">A object-oriented programming language that is designed to have as few implementation dependencies as possible.</p>
+            <div class="read-more">
+              <span class="btn read">Read More</span>
+            </div>
           </div>
           <div class="clear"></div>
         </div>
